styles.css
/*Elements: */
body {
    background-color: #647e94;
}

p {
    font-size: 1.5em;
}

h1 {
    margin-bottom: -3%;
}

/*Classes: */
.main-content {
    width: 1000px;
    background-color: #ccdad6;
    height: 300vh;
    margin: 0 auto;
}

.indent-one {
    padding-left: 12%;
    padding-right: 12%;
}

.indent-two {
    margin: 0 auto;
    width: 90%;
}

.project-tab {
    margin: 0 auto;
    width: 100%;
    height: 48px;
    background-color: #4a4a4a;
    border-style: solid;
    border-color: #4d63a2;
}

/*IDs:*/
#first-header-offset {
    padding-top: 5%;
}

#headshot {
    width: 128px;
    height: 128px;
    border-radius: 100%;
}

